--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^20.14.11",
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.4",
+    "prisma": "^6.7.0",
     "typescript": "^5.5.3"
   },
   "dependencies": {
