--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
+    "@prisma/client": "^6.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
